--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -231,7 +231,7 @@ button::-moz-focus-inner {
     text-align: center;
     opacity: 0;
     color: #fff;
-    background: rgba(240, 95, 64, 0.9);
+    background: rgba(220,53,69, 0.8);
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     transition: all 0.2s; }
