--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -68,6 +68,9 @@ img::-moz-selection {
   color: #fff;
   background: transparent; }
 
+.img-fluid {
+  height: 240px; }
+
 body {
   -webkit-tap-highlight-color: #212529; }
 
